Bug 398007 - "Edit" > "Stroke Selection..." with current brush does not work with local selections
Summary: "Edit" > "Stroke Selection..." with current brush does not work with local se...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-29 07:34 UTC by mvowada
Modified: 2018-09-07 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (852.24 KB, video/mp4)
2018-08-30 09:28 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-08-29 07:34:58 UTC
(Krita 4.2.0-pre-alpha (git 0ebf6d9) - Ubuntu 14.04)

It seems that "Stroke selection..." with the "Current Brush" doesn't work anymore (no problems with the other option type "Line selection"). Steps:

    1. select an area
    2. "Edit" > "Stroke Selection..." > "Type: Current Brush" > OK

Actual Results: nothing happens
Expected Results: trace the active selection outline with the current brush
Comment 1 Dmitry Kazakov 2018-08-29 11:38:51 UTC
Hi, mvowada!

I cannot reproduce your problem... Can you make a video recording or your screen?
Comment 2 mvowada 2018-08-29 12:40:52 UTC
Hi Dmitry, You're right it works perfectly. I was under the impression it didn't work this morning. I apologize
Comment 3 mvowada 2018-08-30 09:28:07 UTC
Created attachment 114696 [details]
Video

(In reply to Dmitry Kazakov from comment #1)
> Hi, mvowada!
> 
> I cannot reproduce your problem... Can you make a video recording or your
> screen?

Dmitry, I'm going to reopen this bug report (see video). It happens with Local selections:

    1. select an area
    2. convert to Local selection
    3. "Edit" > "Stroke Selection..." > "Type: Current Brush" > OK
Comment 4 Dmitry Kazakov 2018-08-31 12:48:57 UTC
Hi, mvowada!

Thank you for the video I can now reproduce the problem! :)
Comment 5 mvowada 2018-08-31 13:44:18 UTC
Ok, thanks :)
Comment 6 Dmitry Kazakov 2018-08-31 13:45:51 UTC
Git commit 692cc173adb2e6ffc98450adbd96d154fb833cf3 by Dmitry Kazakov.
Committed on 31/08/2018 at 13:45.
Pushed by dkazakov into branch 'master'.

Fix "stroke selection" to work with local selections

M  +2    -2    libs/ui/actions/kis_selection_action_factories.cpp

https://commits.kde.org/krita/692cc173adb2e6ffc98450adbd96d154fb833cf3
Comment 7 Halla Rempt 2018-09-07 14:26:02 UTC
Git commit 7c3b963c5c5dd4c72f506de093693ba36a39d909 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 07/09/2018 at 12:51.
Pushed by rempt into branch 'krita/4.1'.

Fix "stroke selection" to work with local selections

M  +2    -2    libs/ui/actions/kis_selection_action_factories.cpp

https://commits.kde.org/krita/7c3b963c5c5dd4c72f506de093693ba36a39d909