Fix "stroke selection" to work with local selections

BUG:398007